# design_patterns

./: .gitignore  README.md
animals/: Animal.cpp  Animal.hpp  CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  main.cpp
design_patterns/: build_projects.bat  build_projects.sh
design_patterns/behavioral_design_patterns/chain_of_responsibility/: README.md
design_patterns/behavioral_design_patterns/chain_of_responsibility/documentation/: chain_of_responsibility.drawio
design_patterns/behavioral_design_patterns/chain_of_responsibility/src/: BaseHandler.hpp  CMakeLists.txt  ContainsNumberHandler.hpp  ContainsOnlyEnglishLettersHandler.hpp  ContainsSpecialCharacterHandler.hpp  MinLenghtHandler.hpp  Password.hpp  main.cpp
design_patterns/behavioral_design_patterns/command/: README.md
design_patterns/behavioral_design_patterns/command/documentation/: command.drawio
design_patterns/behavioral_design_patterns/command/src/: CMakeLists.txt  Command.hpp  Heater.hpp  Lights.hpp  RemoteControl.hpp  TurnOffHeatingCommand.hpp  TurnOffLightsCommand.hpp  TurnOnHeatingCommand.hpp  TurnOnLightsCommand.hpp  main.cpp
design_patterns/behavioral_design_patterns/iterator/: README.md
design_patterns/behavioral_design_patterns/iterator/documentation/: iterator.drawio
design_patterns/behavioral_design_patterns/iterator/src/: BinaryTree.hpp  CMakeLists.txt  Iterator.hpp  Node.hpp  Tree.hpp  main.cpp
design_patterns/behavioral_design_patterns/mediator/: README.md
design_patterns/behavioral_design_patterns/mediator/documentation/: mediator.drawio
design_patterns/behavioral_design_patterns/mediator/src/: AirTrafficMediator.cpp  AirTrafficMediator.hpp  Aircraft.hpp  CMakeLists.txt  Helicopter.cpp  Helicopter.hpp  Mediator.hpp  Plane.cpp  Plane.hpp  main.cpp
design_patterns/behavioral_design_patterns/memento/: README.md
design_patterns/behavioral_design_patterns/memento/documentation/: memento.drawio
design_patterns/behavioral_design_patterns/memento/src/: CMakeLists.txt  CareTaker.hpp  TextEditor.hpp  main.cpp
design_patterns/behavioral_design_patterns/observer/: README.md
design_patterns/behavioral_design_patterns/observer/documentation/: observer.drawio
design_patterns/behavioral_design_patterns/observer/src/: CMakeLists.txt  NewsAppSubscriber.hpp  Subscriber.hpp  WeatherAppSubscriber.hpp  WeatherStation.hpp  main.cpp
design_patterns/behavioral_design_patterns/state/: README.md
design_patterns/behavioral_design_patterns/state/documentation/: state.drawio
design_patterns/behavioral_design_patterns/state/src/: CMakeLists.txt  Elavator.hpp  FirstFloor.cpp  FirstFloor.hpp  Garage.cpp  Garage.hpp  GroundFloor.cpp  GroundFloor.hpp  Level.hpp  main.cpp
design_patterns/behavioral_design_patterns/strategy/: README.md
design_patterns/behavioral_design_patterns/strategy/documentation/: strategy.drawio
design_patterns/behavioral_design_patterns/template_method/: README.md
design_patterns/behavioral_design_patterns/visitor/: README.md
design_patterns/creational_design_patterns/abstract_factory/: README.md
design_patterns/creational_design_patterns/abstract_factory/src/: ApplePhone.hpp  AppleTablet.hpp  AppleToolFactory.hpp  CMakeLists.txt  Phone.hpp  SamsungPhone.hpp  SamsungTablet.hpp  SamsungToolFactory.hpp  Tablet.hpp  ToolFactory.hpp  main.cpp
design_patterns/creational_design_patterns/builder/: README.md
design_patterns/creational_design_patterns/builder/src/: Builder.hpp  CMakeLists.txt  Director.cpp  Director.hpp  Pizza.cpp  Pizza.hpp  PizzaBuilder.hpp  Pizzabuilder.cpp  main.cpp
design_patterns/creational_design_patterns/factory_method/: README.md
design_patterns/creational_design_patterns/factory_method/src/: CMakeLists.txt  Creator.cpp  Creator.hpp  ICreature.hpp  Person.cpp  Person.hpp  PersonCreator.cpp  PersonCreator.hpp  Zombie.cpp  Zombie.hpp  ZombieCreator.cpp  ZombieCreator.hpp  main.cpp
design_patterns/creational_design_patterns/prototype/: README.md
design_patterns/creational_design_patterns/prototype/src/: CMakeLists.txt  Equipment.hpp  Prototype.hpp  Warrior.hpp  main.cpp
design_patterns/creational_design_patterns/singleton/: README.md
design_patterns/creational_design_patterns/singleton/src/: CMakeLists.txt  Logger.cpp  Logger.hpp  main.cpp
design_patterns/structural_desing_patterns/: decorator.cpp
design_patterns/structural_desing_patterns/adapter/: README.md
design_patterns/structural_desing_patterns/adapter/src/: AdapterInterface.hpp  CMakeLists.txt  KilometerToMilesAdapter.cpp  KilometerToMilesAdapter.hpp  MapApplication.cpp  MapApplication.hpp  RouteTimeCalculator.hpp  main.cpp
design_patterns/structural_desing_patterns/bridge/: README.md
design_patterns/structural_desing_patterns/bridge/src/: CMakeLists.txt  CreditCardPayment.hpp  GooglePayPayment.hpp  HungarianPaymentProcessor.hpp  PaymentMethod.hpp  PaymentProcessor.hpp  USPaymentProcessor.hpp  main.cpp
design_patterns/structural_desing_patterns/composite/: README.md
design_patterns/structural_desing_patterns/composite/src/: Box.hpp  CMakeLists.txt  CompositeBox.cpp  CompositeBox.hpp  Product.hpp  main.cpp
design_patterns/structural_desing_patterns/decorator/: README.md
design_patterns/structural_desing_patterns/decorator/src/: CMakeLists.txt  Coffee.hpp  CoffeeDecorator.hpp  Component.hpp  FoamDecorator.hpp  MilkDecorator.hpp  SugarDecorator.hpp  main.cpp
design_patterns/structural_desing_patterns/facade/: README.md
design_patterns/structural_desing_patterns/facade/src/: CMakeLists.txt  DataBase.cpp  DataBase.hpp  DataReader.cpp  DataReader.hpp  StatisticMaker.cpp  StatisticMaker.hpp  StatisticMakerController.cpp  StatisticMakerController.hpp  data.csv  main.cpp
design_patterns/structural_desing_patterns/flyweight/: README.md
design_patterns/structural_desing_patterns/flyweight/src/: CMakeLists.txt  Forest.cpp  Forest.hpp  Tree.cpp  Tree.hpp  TreeFactory.cpp  TreeFactory.hpp  TreeType.cpp  TreeType.hpp  main.cpp
design_patterns/structural_desing_patterns/proxy/: README.md
hello/: CMakeLists.txt
(+48 files in other folders)
